# cloudflare-dyndns

./: .gitignore  Dockerfile  Makefile  SECURITY.md  justfile  pyproject.toml  update_dns.example.json  update_dns.py
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  dependabot_auto_merge.yml  mypy.yml  pylint.yml  pytest.yml
cloudflare_dyndns/: __init__.py  __main__.py
tests/: test_auth_header.py
