
[project]
name = "cloudflare-dyndns"
description = "A terrible dynamic DNS updater for cloudflare"
license = { text = "MIT" }
version = "0.0.2"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "requests>=2.33.1",
    "loguru>=0.7.2",
    "pydantic>=2.12.5",
    "backoff>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cloudflare-dyndns = "cloudflare_dyndns.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "ruff>=0.6.4",
    "pytest>=9.0.3",
    "types-requests>=2.32.0.20240905",
    "backoff-stubs>=1.11.1",
    "ty>=0.0.31",
]
