
[project]
name = "cloudflare-dyndns"
description = "A terrible dynamic DNS updater for cloudflare"
license = { text = "MIT" }
version = "0.0.2"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "requests>=2.34.2",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "backoff>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cloudflare-dyndns = "cloudflare_dyndns.__main__:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.18",
    "pytest>=9.1.1",
    "types-requests>=2.33.0.20260518",
    "ty>=0.0.51",
]
